--- a/css/style3.css
+++ b/css/style3.css
@@ -26,6 +26,12 @@
     text-decoration: none;
     white-space: nowrap;
 }
+
+a:focus {
+    outline: medium none;
+    outline-offset: -2px;
+}
+
 .select2-container.select2-drop-above .select2-choice {
     background-image: -moz-linear-gradient(center bottom , #eee 0%, #fff 90%);
     border-bottom-color: #aaa;
@@ -5469,7 +5475,6 @@ body.landing-page #landing-intro.intro-customer-bloomthat .intro-quote q {
     text-decoration: none;
     text-transform: uppercase;
     transition: color 125ms ease-in-out 0s;
-	text-shadow:none;
 }
 #corporate-main-nav #corporate-nav-bar ul.navbar-nav a:hover, #corporate-main-nav #corporate-nav-bar ul.navbar-nav a:focus, #corporate-main-nav #corporate-nav-bar ul.navbar-nav button:hover, #corporate-main-nav #corporate-nav-bar ul.navbar-nav button:focus {
     background: none repeat scroll 0 0 transparent;
@@ -7686,13 +7691,13 @@ body.signup #signup-top #signup-form-wrapper #signup-form {
 }
 @media not all, not all, all and (min-width: 992px) and (min--moz-device-pixel-ratio: 1.5), not all {
 #corporate-subnav-bar ul.navbar-nav li:first-child {
-    background-image: url("../img/dotted-vr-4px-white-93947f3ff28554a98af42533a69a6173.png");
+    background-image: url("../img/dotted-vr-4px-white@2x-a164f40915fa142f67cae667618bd90d.png");
     background-size: 2px auto;
 }
 }
 @media not all, not all, all and (min-width: 992px) and (min--moz-device-pixel-ratio: 1.5), not all {
 #corporate-subnav-bar ul.navbar-nav li a {
-    background-image: url("../img/dotted-vr-4px-white-93947f3ff28554a98af42533a69a6173.png");
+    background-image: url("../img/dotted-vr-4px-white@2x-a164f40915fa142f67cae667618bd90d.png");
     background-size: 2px auto;
 }
 }
@@ -9260,464 +9265,5 @@ span.span-inline-block-lg {
 #total .total-text p.text-large {
     font-size: 1.382em !important;
 }
-}
-
-.twitter-quote-embed {
-    background: none repeat scroll 0 0 #fff;
-    border-color: #eee #ddd #bbb;
-    border-image: none;
-    border-radius: 5px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-    display: block;
-    margin: 10px 0 10px 20px;
-    max-width: 99%;
-    min-width: 220px;
-    padding: 20px;
-    position: static;
-    visibility: visible;
-    width: 466px;
-}
-.twitter-quote-embed .avatar {
-    background: none repeat scroll 0 0 #fff;
-    border-radius: 4px;
-    height: 48px;
-    top: 0;
-}
-.standalone-tweet .subject .header .profile .p-name {
-    font-size: 16px;
-}
-.customisable-highlight {
-    font-weight: bold;
-	color: #292f33;
-
-}
-.customisable-highlight:hover {
-	text-decoration:underline;
-}
-.p-nickname{
-	font-size: 14px;
-	font-style: normal;
-    font-weight: normal;
-	color: #707070;
-}
-.custom-timeline-owner-profile {
-    display: block;
-}
-.custom-timeline-owner-profile .verified {
-    margin-left: -38px;
-    margin-right: 3px;
-}
-.custom-timeline .timeline-header {
-    border-bottom-width: 3px;
-}
-.custom-timeline-owner-profile {
-    height: 16px;
-    line-height: 16px;
-    padding-left: 21px;
-    position: relative;
-}
-.custom-timeline-owner-profile .avatar {
-    border-radius: 2px;
-    display: block;
-    height: 16px;
-    left: 0;
-    position: absolute;
-    width: 16px;
-}
-.custom-timeline .custom-timeline-summary {
-    margin-bottom: 11px;
-}
-.custom-timeline .custom-timeline-description {
-    margin-bottom: 12px;
-}
-.custom-timeline-owner-profile {
-    margin-bottom: 4px;
-}
-.nsfw {
-    background-color: rgba(0, 0, 0, 0.02);
-    border-radius: 4px;
-    padding: 8px;
-}
-.standalone-tweet {
-    background: none repeat scroll 0 0 #fff;
-    border-radius: 5px;
-    padding: 8px 8px 0;
-}
-.standalone-tweet .subject {
-    margin-top: 4px;
-}
-.standalone-tweet .subject, .standalone-tweet.rtl .subject {
-    border: 0 none;
-    padding: 4px 8px 8px;
-}
-.standalone-tweet .subject .header {
-    min-height: 48px;
-    padding: 3px 0 4px 57px;
-    position: relative;
-}
-.standalone-tweet.rtl .subject .header {
-    padding: 3px 57px 4px 0;
-}
-.standalone-tweet .expanded .footer {
-    margin-top: 5px;
-}
-.standalone-tweet .reply {
-    padding: 8px 8px 8px 65px;
-}
-.standalone-tweet .subject .header .avatar {
-    left: 0;
-}
-.standalone-tweet.rtl .subject .header .avatar {
-    left: auto;
-    right: 0;
-}
-.standalone-tweet .subject .header .profile .p-name {
-    font-size: 16px;
-}
-.standalone-tweet .subject .header .profile .p-nickname {
-    font-size: 14px;
-}
-.standalone-tweet .subject .header .profile .p-nickname:before {
-    content: "\A ";
-    white-space: pre;
-}
-.standalone-tweet .follow-button, .standalone-tweet .twitter-follow-button {
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.standalone-tweet.rtl .follow-button, .standalone-tweet.rtl .twitter-follow-button {
-    left: 0;
-    right: auto;
-}
-.standalone-tweet .subject .e-entry-title {
-    font-size: 18px;
-    line-height: 24px;
-}
-.standalone-tweet .subject .dateline {
-    margin-top: 6px;
-    white-space: nowrap;
-}
-.standalone-tweet .subject .p-geo {
-    float: none;
-}
-.standalone-tweet .subject .dateline .p-geo, .standalone-tweet .subject .dateline .media-tag {
-    margin-left: 3px;
-}
-.media-tag .tag-count {
-    display: none;
-}
-.collapse-media-tag .media-tag .tag-count {
-    display: inline;
-}
-.standalone-tweet .subject .cards-base {
-    padding-bottom: 0;
-}
-.standalone-tweet .subject .stats-narrow, .standalone-tweet .subject .brand {
-    display: block;
-    float: left;
-    margin: 0;
-}
-.standalone-tweet.rtl .subject .stats-narrow, .standalone-tweet.rtl .subject .brand {
-    float: right;
-}
-.standalone-tweet .subject .tweet-actions {
-    float: right;
-    margin-bottom: 4px;
-    position: static;
-    visibility: visible;
-}
-.standalone-tweet.rtl .subject .tweet-actions {
-    float: left;
-}
-.standalone-tweet .conversation {
-    background: none repeat scroll 0 0 #f6f6f6;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    margin: -8px -8px 8px;
-    padding: 8px 8px 4px;
-}
-.standalone-tweet .reply {
-    border: 0 none;
-    min-height: 48px;
-    position: relative;
-}
-.follow-button:link, .follow-button:visited {
-    background-color: #eee;
-    background-image: linear-gradient(#fff, #dedede);
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    color: #333;
-    cursor: pointer;
-    display: inline-block;
-    font: bold 11px/18px "Helvetica Neue",Arial,sans-serif;
-    padding: 0 5px 0 3px;
-    text-decoration: none;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    white-space: nowrap;
-}
-.ie9 .follow-button:link, .ie9 .follow-button:visited {
-    border-radius: 0;
-}
-.follow-button:focus, .follow-button:hover, .follow-button:active {
-    background-color: #d9d9d9;
-    background-image: linear-gradient(#f8f8f8, #d9d9d9);
-    border-color: #bbb;
-    box-shadow: none;
-    color: #333;
-    text-decoration: none;
-}
-.timeline-header a.follow-button:link, .timeline-header a.follow-button:visited, .timeline-header a.follow-button:hover, .timeline-header a.follow-button:focus, .timeline-header a.follow-button:active, .thm-dark .timeline-header a.follow-button:link, .thm-dark .timeline-header a.follow-button:visited, .thm-dark .timeline-header a.follow-button:hover, .thm-dark .timeline-header a.follow-button:focus, .thm-dark .timeline-header a.follow-button:active {
-    color: #333;
-    text-decoration: none;
-}
-.thm-dark a.follow-button:link, .thm-dark a.follow-button:visited, .thm-dark a.follow-button:hover, .thm-dark a.follow-button:focus, .thm-dark a.follow-button:active {
-    color: #333;
-}
-.ie9 .follow-button:hover, .ie9 .follow-button:focus, .ie9 .follow-button:active {
-}
-.follow-button:active {
-    background-color: #efefef;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1) inset;
-}
-.follow-button:focus {
-    border-color: #0089cb;
-    outline: 0 none;
-}
-.var-narrow .timeline-header .summary {
-    font-size: 14px;
-}
-.var-narrow .custom-timeline-summary {
-    font-size: 14px;
-    margin-bottom: 7px;
-}
-.var-narrow .custom-timeline-description {
-    margin-bottom: 10px;
-}
-.var-narrow .header .profile .p-name, .var-narrow .timeline-header .byline, .var-narrow .timeline-header .list-description, .var-narrow .e-entry-title, .var-narrow .cards-base h3 {
-    font-size: 12px;
-    line-height: 16px;
-}
-.var-narrow .timeline-header {
-    padding: 8px;
-}
-.var-narrow .timeline-footer {
-    padding: 4px;
-}
-.var-narrow .timeline-header .follow-button, .var-narrow .timeline-header .twitter-follow-button {
-    right: 6px;
-    top: 6px;
-}
-.var-narrow .tweet {
-    padding: 5px 8px 6px;
-}
-.var-narrow .tweet .header {
-    min-height: 32px;
-    padding: 0 0 4px 36px;
-    position: relative;
-}
-.var-narrow .header .avatar {
-    height: 32px;
-    left: 0;
-    top: 2px;
-    width: 32px;
-}
-.var-narrow .header .profile .p-nickname:before {
-    content: "\A ";
-    white-space: pre;
-}
-.var-narrow .header .p-name {
-    display: inline;
-}
-.var-narrow .header .p-nickname {
-    line-height: 16px;
-}
-.var-narrow .permalink {
-    font-size: 11px;
-}
-.var-narrow .expanded .stats-wide {
-    display: none;
-}
-.var-narrow .expanded .stats-narrow, .var-narrow .brand {
-    display: block;
-    font-size: 11px;
-    margin: 0 0 4px;
-}
-.var-narrow .cards-base .summary-thumbnail {
-    max-height: 60px;
-    max-width: 60px;
-}
-.var-narrow.standalone-tweet .subject {
-    margin-top: 1px;
-}
-.var-narrow.standalone-tweet .subject .header .profile .p-name {
-    font-size: 14px;
-}
-.var-narrow.standalone-tweet .subject .header .profile .p-nickname {
-    font-size: 12px;
-}
-.var-narrow.standalone-tweet .subject .header {
-    margin-bottom: 8px;
-}
-.var-narrow.standalone-tweet .subject .e-entry-title {
-    font-size: 16px;
-    line-height: 20px;
-}
-.var-narrow.standalone-tweet .expanded .footer {
-    padding-top: 6px;
-}
-.var-narrow.standalone-tweet .stats-narrow, .var-narrow.standalone-tweet.rtl .stats-narrow, .var-narrow.standalone-tweet .brand, .var-narrow.standalone-tweet.rtl .brand {
-    border-width: 0 0 1px;
-    display: block;
-    float: none;
-    margin: 0 0 8px;
-    padding-bottom: 5px;
-}
-.var-narrow.standalone-tweet .tweet-actions, .var-narrow.standalone-tweet.rtl .tweet-actions {
-    float: none;
-    margin-bottom: 3px;
-    overflow: hidden;
-    position: static;
-    white-space: nowrap;
-}
-.var-narrow.standalone-tweet .tweet-actions li {
-    display: inline-block;
-    float: none;
-    text-align: center;
-    width: 33.33%;
-}
-.var-narrow.standalone-tweet .tweet-actions li a {
-    display: block;
-    margin: 0;
-    width: 100%;
-}
-.var-narrow.standalone-tweet .tweet-actions a i {
-    margin: 0;
-}
-.rtl, .rtl .tweet-box-button, .rtl .follow-button {
-    direction: rtl;
-    text-align: right;
-}
-.rtl .p-nickname {
-    direction: ltr;
-    text-align: left;
-}
-.rtl .header {
-}
-.rtl .permalink, .rtl .tweet-actions, .rtl .cards-base .summary-thumbnail {
-    float: left;
-}
-.rtl .expand, .rtl .p-geo, .rtl .tweet-actions li {
-    float: right;
-}
-.rtl .permalink {
-    clear: left;
-}
-.rtl .custom-timeline-owner-profile {
-    padding-left: 0;
-    padding-right: 21px;
-}
-.rtl .custom-timeline-owner-profile .avatar {
-    right: 0;
-}
-.rtl .tweet {
-    padding: 12px 69px 10px 12px;
-}
-.var-narrow.rtl .tweet {
-    padding: 5px 8px 6px;
-}
-.rtl .header .avatar {
-    left: auto;
-    right: -57px;
-}
-.var-narrow.rtl .tweet .header {
-    padding: 0 36px 4px 0;
-}
-.rtl.var-narrow .header .avatar {
-    right: 0;
-}
-.rtl .tweet-actions {
-    left: 0;
-    right: auto;
-}
-.rtl .timeline-header .follow-button, .rtl .timeline-header .twitter-follow-button, .rtl .timeline-header .ic-twitter-badge {
-    left: 12px;
-    position: absolute;
-    right: auto;
-}
-.var-narrow.rtl .timeline-header .follow-button, .var-narrow.rtl .timeline-header .twitter-follow-button {
-    left: 6px;
-    right: auto;
-}
-.rtl .cards-base .source-user {
-    padding: 0 21px 0 0;
-}
-.rtl .cards-base .source-user .avatar {
-    left: auto;
-    right: 0;
-}
-.rtl .follow-button {
-    padding: 0 3px 0 5px;
-}
-.rtl .ic-top {
-    margin: 2px 0 0 4px;
-}
-.rtl .ic-twitter-alert {
-    margin: 0 0 3px 3px;
-}
-.customisable-highlight{
-	font-size: 16px;
-	color: #292f33;
-	font-weight: bold;
-	line-height: 16px;
-}
-.customisable-highlight:focus{
-	font-size: 16px;
-	color: #292f33;
-	font-weight: bold;
-	line-height: 16px;
-}
-.standalone-tweet .subject .e-entry-title {
-    font-size: 18px;
-    line-height: 24px;
-}
-.e-entry-title {
-    font-size: 18px;
-    line-height: 24px;
-	color:#000;
-	clear: both;
-    margin: 0 5px 0 0;
-}
-.content.e-entry-content {
-    padding: 0 20px 0 0;
-}
-. blue-styling{
-	font-size:19px; color:#0084b4; text-decoration:none;
-	}
-.dt-updated {
-    font-size: 13px;
-	color: #707070;
-	font-weight:normal;
-}
-.dateline{
-	border-bottom:1px solid #e8e8e8;
-	padding-bottom:10px;
-}
-.ic-mask {
-    background-color: #999;
-    height: 13px;
-    width: 12px;
-}
-.stats{
-    color: #707070 !important;
-    font-size: 12px;
-	}
-.h-card.p-author {
-    float: left;
-    width: 60%;
-}
-.follow-button.profile {
-    float: right;
 }
 
